--- a/app/views/layouts/tickets.html.erb
+++ b/app/views/layouts/tickets.html.erb
@@ -5,54 +5,123 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Tickets: <%= controller.action_name %></title>
-	<!-- <%= javascript_include_tag 'jquery', 'application' %>
+  <!-- <%= javascript_include_tag 'jquery', 'application' %>
   <%= stylesheet_link_tag 'scaffold' %> -->
-	<script type="text/javascript" src="javascripts/jquery-1.3.2.min.js"></script> 
-	<script type="text/javascript" src="javascripts/jquery.ui-edited.js"></script>
+  <script type="text/javascript" src="javascripts/jquery-1.3.2.min.js"></script> 
+  <script type="text/javascript" src="javascripts/jquery.ui-edited.js"></script>
 
-	<link rel='stylesheet' href='stylesheets/styles.css' type='text/css' media='all' />
+  <link rel='stylesheet' href='stylesheets/styles.css' type='text/css' media='all' />
 
-	<script type="text/javascript" charset="utf-8">
-		//var AUTH_TOKEN = "<%= protect_against_forgery? ? form_authenticity_token : '' %>";
-		//$.ajaxSetup({data:{authenticity_token : AUTH_TOKEN}});
-		$(function() {
+  <script type="text/javascript" charset="utf-8">
+    //var AUTH_TOKEN = "<%= protect_against_forgery? ? form_authenticity_token : '' %>";
+    //$.ajaxSetup({data:{authenticity_token : AUTH_TOKEN}});
+    $(function() {
 
-			$('.ticket_list').selectable({
-				autoRefresh: false,
-				stop: function(e,ui){
-					$(this).selectable( 'refresh');
-				},
-				noConflict : true
-			});
+  /*   $('.ticket_list').selectable({
+        autoRefresh: false,
+        filter: '.grabber',
+        stop: function(e,ui){
+          $(this).selectable( 'refresh');
+        },
+        noConflict : true
+      }); */
 
-			$('.ticket_list').sortable({
-				cursor: 'crosshair',
-		    connectWith: $('.ticket_list'),
-				receive: function(event, ui) {
-					$.ajax({
-					  type: "PUT",
-					  url: "/tickets/" + ui.item.attr('id') + ".js",
-					  data: { assigned_user_id : this.id },
-					  dataType: 'json'
-					});
-				}
-			});
+      $('.ticket_list').sortable({
+        cursor: 'crosshair',
+        connectWith: $('.ticket_list'),
+        receive: function(event, ui) {
+          $.ajax({
+            type: "PUT",
+            url: "/tickets/" + ui.item.attr('id') + ".js",
+            data: { assigned_user_id : this.id },
+            dataType: 'json'
+          });
+        }
+      }); 
+      
+    
+      $('a.reassign').live('mouseover',function(e){
+        var id = $(e.target).closest('.ticket').attr('id');
+        
+        $('div.menu').remove();
+        $('#'+id).append('<div class="menu"><ul><li><a class="status_invalid" href="#">Invalid</a></li><li><a class="status_wont" href="#">Won\'t Fix</a></li><li><a class="status_hold" href="#">Hold</a></li></ul></div>');
+      
+        $('#' + id + " .menu").one('mouseout',function(){
+         // $('#' + id + " .menu").remove();
+        });
+        
+        
+        return false;
+      });
+      
+      $('a.delete').live('click',function(e){
+        var id = $(e.target).closest('.ticket').attr('id');
 
-			
-			$('.ticket_list > li > a').click(function() {
-				alert('HI');
-				$.ajax({
-				  type: "PUT",
-				  url: "/tickets/" +$(this).parents("li:first").attr('id') + ".js",
-				  data: { state : 'resolved' },
-				  dataType: 'json'
-				});
-			  $(this).parents("li:first").remove();
-			
-			  $('.ticket_list').sortable('refresh');
-			});
-		});
-	</script>
+        $.ajax({
+          type: "PUT",
+          url: "/tickets/" + id+ ".js",
+          data: { state : 'resolved' },
+          dataType: 'json'
+        }); 
+        $('#' + id).remove();
+        
+        $('.ticket_list').sortable('refresh');
+        
+        return false;
+      });
+      
+      $('a.status_invalid').live('click',function(e){
+        var id = $(e.target).closest('.ticket').attr('id');
+
+        $.ajax({
+          type: "PUT",
+          url: "/tickets/" + id+ ".js",
+          data: { state : 'invalid' },
+          dataType: 'json'
+        }); 
+        $('#' + id).remove();
+        
+        $('.ticket_list').sortable('refresh');
+        
+        return false;
+      });
+      
+      
+      $('a.status_wont').live('click',function(e){
+        var id = $(e.target).closest('.ticket').attr('id');
+
+        $.ajax({
+          type: "PUT",
+          url: "/tickets/" + id+ ".js",
+          data: { state : 'wont_fix' },
+          dataType: 'json'
+        }); 
+        $('#' + id).remove();
+        
+        $('.ticket_list').sortable('refresh');
+        
+        return false;
+      });
+      
+      
+      $('a.status_hold').live('click',function(e){
+        var id = $(e.target).closest('.ticket').attr('id');
+
+        $.ajax({
+          type: "PUT",
+          url: "/tickets/" + id+ ".js",
+          data: { state : 'hold' },
+          dataType: 'json'
+        }); 
+        $('#' + id).remove();
+        
+        $('.ticket_list').sortable('refresh');
+        
+        return false;
+      });
+      
+    });
+  </script>
 
 </head>
 <body>
