--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,5 +1,13 @@
-<h1>LighterHouse</h1>
-<br>
+<div id="header">
+  <div id="titles">
+    <h1>
+        <strong id="account-name">Animoto</strong>
+        <a class="pname">Lighterhouse</a>
+      
+    </h1>
+  </div>
+  
+</div>
 <%= render(:partial => "bin", :object => @jeff_tickets) %> 
 <%= render(:partial => "bin", :object => @jordan_tickets) %> 
 <%= render(:partial => "bin", :object => @moses_tickets) %> 
