--- a/app/views/tickets/_bin.html.erb
+++ b/app/views/tickets/_bin.html.erb
@@ -1,8 +1,19 @@
 <div class="ticket_bin" id="<%= bin.first.assigned_user_id rescue nil %>">
-		<%= bin.first.assigned_user_name rescue 'Unassigned' %>
+		<h4><%= bin.first.assigned_user_name rescue 'Unassigned' %></h4>
     <ul class="ticket_list" id="<%= bin.first.assigned_user_id rescue nil %>">
 <% for ticket in bin %>
-        <li id="<%= ticket.unique_id %>"><%= ticket.title.length > 30 ? ticket.title[0..30] + '...' : ticket.title %><a class='delete' href=#>X</a></li>
+        <li class="ticket priority_<%=ticket.priority -%>" id="<%= ticket.unique_id %>">
+          <div class="grabber">&nbsp;</div>
+          <%= ticket.title.length > 30 ? ticket.title[0..30] + '...' : ticket.title %>
+          <div class="tools">
+            <a class='delete' href="#">
+              <img src="/images/icon_delete.png" width="16" height="16" border="0" alt="Delete this ticket" title="Delete this ticket" />
+            </a>
+            <a class='reassign' href="#">
+              <img src="/images/icon_status.png" width="16" height="16" border="0" alt="Change ticket status" title="Change ticket status" />
+            </a>
+          </div>
+        </li>
 <% end %>
     </ul> 
 </div>
